--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  geolocator: ^5.3.2+2
+  image_picker: ^0.6.7+4
+  font_awesome_flutter: ^8.8.1
+  http: ^0.12.2
+  flutter_otp: ^0.3.2
 
 
   # The following adds the Cupertino Icons font to your application.
